force-app/main/default/objects/Price_Tier__c/Price_Tier__c.object-meta.xml
<CustomObject>
    <label>Price Tier</label>
    <pluralLabel>Price Tiers</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Price Tier Number</label>
        <displayFormat>PT-{00000}</displayFormat>
    </nameField>
    <sharingModel>Read</sharingModel>
    <description>Volume-based pricing tier (quantity break). Middle precedence in the PricingService cascade (override > tier > base). OWD Public Read Only. See ADR-0002.</description>
</CustomObject>