force-app/main/default/objects/Price_Tier__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <label>Effective Date</label>
    <type>Date</type>
    <description>Date this tier becomes active. See ADR-0002.</description>
</CustomField>