force-app/main/default/objects/Price_Tier__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
    <description>Date this tier expires (blank = open-ended). See ADR-0002.</description>
</CustomField>