force-app/main/default/objects/Price_Tier__c/fields/Max_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Max_Quantity__c</fullName>
    <label>Max Quantity</label>
    <type>Number</type>
    <precision>12</precision>
    <scale>0</scale>
    <description>Maximum quantity (inclusive) for this tier. Blank = top/open-ended tier. See ADR-0002.</description>
</CustomField>