force-app/main/default/objects/Price_Tier__c/fields/Min_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Min_Quantity__c</fullName>
    <label>Min Quantity</label>
    <type>Number</type>
    <precision>12</precision>
    <scale>0</scale>
    <required>true</required>
    <description>Minimum quantity (inclusive) for this tier to apply. See ADR-0002.</description>
</CustomField>