force-app/main/default/objects/Price_Tier__c/fields/Pricebook2__c.field-meta.xml
<CustomField>
    <fullName>Pricebook2__c</fullName>
    <label>Pricebook</label>
    <type>Lookup</type>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Price Tiers</relationshipLabel>
    <relationshipName>Price_Tiers</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The segment Pricebook these tiers apply to (Retailer/Restaurant/Small Business). Part 2 of the segment-aware coordinate (Product2 + Pricebook2). Blank = applies across all segments for the product. Preserves the segment-aware intent of ADR-0002 despite the PricebookEntry lookup restriction.</description>
</CustomField>