force-app/main/default/objects/Price_Tier__c/fields/Tier_Price__c.field-meta.xml
<CustomField>
    <fullName>Tier_Price__c</fullName>
    <label>Tier Price</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <required>true</required>
    <description>Unit price when the ordered quantity falls in this tier. See ADR-0002.</description>
</CustomField>